tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/InterviewQuestion__c.object-meta.xml
<CustomObject>
    <label>InterviewQuestion</label>
    <nameField>
        <label>InterviewQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterviewQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>