tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Allow_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Allow_Carry_Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the interview runtime can resolve and present a prior answer for reuse.</description>
    <label>Allow Carry Forward</label>
    <type>Checkbox</type>
</CustomField>