tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <inlineHelpText>Stable key like housing_status</inlineHelpText>
    <label>API Name</label>
    <type>TextArea</type>
</CustomField>