tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <label>Approval Notes</label>
    <type>TextArea</type>
</CustomField>