tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Compliance_Flags__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Flags__c</fullName>
    <label>Compliance Flags</label>
    <type>TextArea</type>
</CustomField>