tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Data_Binding__c.field-meta.xml
<CustomField>
    <fullName>Data_Binding__c</fullName>
    <label>Data Binding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>