tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Field_Set_Group__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Group__c</fullName>
    <description>Groups related questions together for display (e.g., &quot;Health Insurance&quot;, &quot;Non-Cash Benefits&quot;). When set, questions with the same group name will be displayed together in a card during interviews.</description>
    <inlineHelpText>Optional: Group name for related fields. Questions with the same group name will display together in a card. Examples: Health Insurance, Non-Cash Benefits, Trauma Triggers, Warning Signs</inlineHelpText>
    <label>Field Set Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>