tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/InterviewQuestionLibrary__c.field-meta.xml
<CustomField>
    <fullName>InterviewQuestionLibrary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InterviewQuestionLibrary</label>
    <referenceTo>InterviewQuestionLibrary__c</referenceTo>
    <relationshipLabel>InterviewQuestions</relationshipLabel>
    <relationshipName>InterviewQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>