tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Maps_To__c.field-meta.xml
<CustomField>
    <fullName>Maps_To__c</fullName>
    <description>Downstream field mapping, e.g., HMIS/FHIR/Medicaid code</description>
    <label>Maps To</label>
    <type>TextArea</type>
</CustomField>