tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>