tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <formula>InterviewQuestionLibrary__r.Question_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Key</label>
    <type>Text</type>
</CustomField>