tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Requires_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the user must explicitly review the carried-forward answer before submit.</description>
    <label>Requires Review</label>
    <type>Checkbox</type>
</CustomField>