tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
            <value>
                <fullName>LongText</fullName>
            </value>
            <value>
                <fullName>RichText</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Radios</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>File</fullName>
                <isActive>false</isActive>
                <label>File</label>
            </value>
            <value>
                <fullName>Score</fullName>
                <isActive>false</isActive>
                <label>Score</label>
            </value>
            <value>
                <fullName>Signature</fullName>
                <isActive>false</isActive>
                <label>Signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>