tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Score_Weight__c</fullName>
    <label>Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>