tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <inlineHelpText>For section headers on the form; Demographics, Personal Info, Housing, Risk, etc...</inlineHelpText>
    <label>Section</label>
    <length>64</length>
    <type>Text</type>
</CustomField>