tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive</label>
    <type>Checkbox</type>
</CustomField>