tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>