tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/fields/Visibility_Rules__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Rules__c</fullName>
    <label>Visibility Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>