tgthrProgramManagement/force-app/main/default/objects/InterviewQuestion__c/validationRules/Protected_Questions_Require_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Protected_Questions_Require_Approval</fullName>
    <active>true</active>
    <description>If this is a Protected question it requires an Approver</description>
    <errorConditionFormula>AND(Protected__c=true, NOT(ISNULL(Approver__c)))</errorConditionFormula>
    <errorDisplayField>API_Name__c</errorDisplayField>
    <errorMessage>This is a Protected question, it requires an Approver</errorMessage>
</ValidationRule>